// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 80,
        "overflow": "visible",
        "paddingBottom": 0,
        "paddingLeft": 25,
        "paddingRight": 25,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <Text
    ellipsizeMode="clip"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "#aaaaaa11",
          "fontSize": 100,
          "fontWeight": "bold",
          "left": 25,
          "position": "absolute",
          "right": 0,
          "top": -20,
        },
        undefined,
      ]
    }
  >
    My screen
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#eee",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginTop": 15,
        },
        undefined,
      ]
    }
  >
    My screen
  </Text>
</View>
`;

exports[`renders correctly without background text 1`] = `
<View
  style={
    Array [
      Object {
        "height": 80,
        "overflow": "visible",
        "paddingBottom": 0,
        "paddingLeft": 25,
        "paddingRight": 25,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#eee",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginTop": 15,
        },
        undefined,
      ]
    }
  >
    My screen
  </Text>
</View>
`;
